# music-cue-player

./: .gitignore  BUILD.md  CMakeLists.txt  FEATURES.md  example.smt  imgui.ini  music-context.md  scriptlet-api.md
engine/: CMakeLists.txt
engine/include/engine/: AudioDecoder.h  AudioEngine.h  AudioFile.h  AudioMath.h  AutoParam.h  Cue.h  CueList.h  FadeData.h  IAudioSource.h  MidiOut.h  MusicContext.h  Scheduler.h  SendRouter.h  ShowFile.h  SnapshotManager.h  StreamReader.h  Timecode.h  TriggerData.h
engine/include/engine/plugin/: AUCompatibilityTester.h  AUComponentEnumerator.h  AUPluginAdapter.h  AudioBlock.h  AudioBusLayout.h  AudioProcessor.h  ChannelPluginChain.h  EventBlock.h  ExternalPluginReference.h  MissingPluginProcessor.h  NativePluginBackend.h  ParameterInfo.h  PluginDescriptor.h  PluginFactory.h  PluginRuntimeStatus.h  PluginState.h  PluginWrapper.h  ProcessContext.h  VST3PluginAdapter.h  VST3Scanner.h
engine/src/: AudioDecoder.cpp  AudioEngine.cpp  AudioFile.cpp  CueList.cpp  FadeData.cpp  LtcStreamReader.cpp  LtcStreamReader.h  MidiSender.cpp  MidiSender.h  MtcGenerator.cpp  MtcGenerator.h  MusicContext.cpp  NetworkSender.cpp  NetworkSender.h  Scheduler.cpp  SendRouter.cpp  ShowFile.cpp  SnapshotManager.cpp  StreamReader.cpp  Timecode.cpp  cue_runner.cpp  mtc_diag.cpp  show_editor.cpp
engine/src/plugin/: AUCompatibilityTester.mm  AUComponentEnumerator.mm  AUPluginAdapter.mm  ChannelPluginChain.cpp  DelayProcessor.cpp  DelayProcessor.h  InternalPluginFactory.cpp  MissingPluginProcessor.cpp  NativePluginBackend.cpp  ParameterSet.cpp  PluginWrapper.cpp  TrimProcessor.cpp  TrimProcessor.h  VST3IIDs.cpp  VST3PluginAdapter.cpp  VST3Scanner.cpp
engine/tests/: CMakeLists.txt  TestHelpers.h  test_au_offline.cpp  test_audio_engine.cpp  test_audio_file.cpp  test_cue_list.cpp  test_external_plugin_backend.cpp  test_plugin.cpp  test_scheduler.cpp  test_timecode.cpp
qt_ui/: CMakeLists.txt
qt_ui/macos/: Info.plist.in
qt_ui/src/: AUEditorBridge.h  AUEditorBridge.mm  AUScanDialog.cpp  AUScanDialog.h  AppModel.cpp  AppModel.h  AudioSetupDialog.cpp  AudioSetupDialog.h  AutomationView.cpp  AutomationView.h  CollectDialog.cpp  CollectDialog.h  ControlsDialog.cpp  ControlsDialog.h  CueListPanel.cpp  CueListPanel.h  CueTableView.cpp  CueTableView.h  DangerousPluginList.cpp  DangerousPluginList.h  DeviceDialog.cpp  DeviceDialog.h  FaderWidget.cpp  FaderWidget.h  InspectorWidget.cpp  InspectorWidget.h  MCImport.cpp  MCImport.h  MainWindow.cpp  MainWindow.h  MidiInputManager.cpp  MidiInputManager.h  MissingMediaDialog.cpp  MissingMediaDialog.h  MixConsoleDialog.cpp  MixConsoleDialog.h  MusicContextView.cpp  MusicContextView.h  OscServer.cpp  OscServer.h  (+36 more)
scriptlets/: adversarial_test.py  api_test.py  csv_import.py
scripts/: api_test.mcp  build_minimal_ffmpeg.sh  example.json  example.txt  example_events.txt  package_mac.sh  test-au-plugin.json  test-show.json
ui/: CMakeLists.txt
ui/src/: main.cpp
